add errors for visit

--- a/src/templates/new_visit.html
+++ b/src/templates/new_visit.html
@@ -29,6 +29,9 @@ Nowa wizyta
 </div>
 </div>
 
-{% include 'btn_return.html' %}
+<p>
+  <div class="col-6 offset-3">
+    <a href="/" class="btn btn-block btn-outline-secondary">Anuluj</a>
+  </div>
 
 {% endblock %}
