--- a/src/templates/new_visit_other_info.html
+++ b/src/templates/new_visit_other_info.html
@@ -19,9 +19,9 @@
       </div>
     </div>
     <div class="form-group row">
-      <label for="time" class="col-sm-6 col-form-label">Czas:</label>
+      <label for="duration" class="col-sm-6 col-form-label">Czas:</label>
       <div class="col-sm-6">
-        <input type="number" min="1" max="60" step="1" class="form-control" id="time" name="time" required="true">
+        <input type="number" min="1" step="1" class="form-control" id="duration" name="duration" required="true">
       </div>
     </div>
     <div class="form-group row">
