--- a/src/templates/btn_return.html
+++ b/src/templates/btn_return.html
@@ -1,7 +1,13 @@
 <div class="row" style="margin-top: 30px">
 
-<div class="col-6 offset-3">
-  <a href="/" class="btn btn-block btn-outline-secondary">Anuluj</a>
-</div>
-  
+  <div class="col-6 offset-3">
+    <div class="form-group row" style="margin-top: 50px;">
+        <div class="col-sm-6">
+          <a href="javascript:history.back()" class="btn btn-block btn-outline-secondary">Powrót</a>
+        </div>
+        <div class="col-sm-6">
+          <a href="/" class="btn btn-block btn-outline-secondary">Anuluj</a>
+        </div>
+    </div>
+  </div>
 </div>
