add user to url

--- a/src/templates/homepage.html
+++ b/src/templates/homepage.html
@@ -14,7 +14,7 @@ Panel użytkownika
   </div>
   <div class="col mb-4">
     <div class="card text-center menuTile justify-content-center">
-      <a href="/register_visit" class="clickableCard"></a>
+      <a href="/{{ user.id }}/register_visit" class="clickableCard"></a>
       <p class="card-text menuTileText">Zapisz wizytę w Escape Roomie</p>
     </div>
   </div>
