--- a/src/templates/new_visit_group_selection.html
+++ b/src/templates/new_visit_group_selection.html
@@ -16,7 +16,7 @@
   
 <div class="list-group">
   {% for group in groups %}
-  <a href="/register_visit/{{ room.id }}/{{ group.id }}" class="list-group-item list-group-item-action">
+  <a href="/{{ user.id }}/register_visit/{{ room.id }}/{{ group.id }}" class="list-group-item list-group-item-action">
     <div class="d-flex w-100 justify-content-between">
       <h5 class="mb-1">{{ group.name }}</h5>
     </div>
