fix user id bugs

--- a/src/templates/homepage.html
+++ b/src/templates/homepage.html
@@ -8,7 +8,7 @@ Panel użytkownika
 <div class="row row-cols-1 row-cols-md-3">
   <div class="col mb-4">
     <div class="card text-center menuTile justify-content-center">
-      <a href="/#" class="clickableCard"></a>
+      <a href="/{{ user.id }}" class="clickableCard"></a>
       <p class="card-text menuTileText">Przeglądaj Escape Roomy</p>
     </div>
   </div>
@@ -20,25 +20,25 @@ Panel użytkownika
   </div>
   <div class="col mb-4">
     <div class="card text-center menuTile justify-content-center">
-      <a href="/#" class="clickableCard"></a>
+      <a href="/{{ user.id }}" class="clickableCard"></a>
       <p class="card-text menuTileText">Wyświetl swoje wizyty</p>
     </div>
   </div>        
   <div class="col mb-4">
     <div class="card text-center menuTile justify-content-center">
-      <a href="/#" class="clickableCard"></a>
+      <a href="/{{ user.id }}" class="clickableCard"></a>
       <p class="card-text menuTileText">Wyświetl rekomendacje</p>
     </div>
   </div>
   <div class="col mb-4">
     <div class="card text-center menuTile justify-content-center">
-      <a href="/#" class="clickableCard"></a>
+      <a href="/{{ user.id }}" class="clickableCard"></a>
       <p class="card-text menuTileText">Zarządzaj grupami</p>
     </div>
   </div>
   <div class="col mb-4">
     <div class="card text-center menuTile justify-content-center">
-      <a href="/#" class="clickableCard"></a>
+      <a href="/{{ user.id }}" class="clickableCard"></a>
       <p class="card-text menuTileText">Wyloguj</p>
     </div>
   </div>
