add visits page

--- a/src/templates/btn_return.html
+++ b/src/templates/btn_return.html
@@ -6,7 +6,7 @@
           <a href="javascript:history.back()" class="btn btn-block btn-outline-secondary">Powrót</a>
         </div>
         <div class="col-sm-6">
-          <a href="/" class="btn btn-block btn-outline-secondary">Anuluj</a>
+          <a href="/{{ user.id }}" class="btn btn-block btn-outline-secondary">Anuluj</a>
         </div>
     </div>
   </div>
