--- a/src/templates/homepage.html
+++ b/src/templates/homepage.html
@@ -20,7 +20,7 @@ Panel użytkownika
   </div>
   <div class="col mb-4">
     <div class="card text-center menuTile justify-content-center">
-      <a href="/{{ user.id }}" class="clickableCard"></a>
+      <a href="/{{ user.id }}/visits  " class="clickableCard"></a>
       <p class="card-text menuTileText">Wyświetl swoje wizyty</p>
     </div>
   </div>        
