--- a/src/templates/new_visit_registered.html
+++ b/src/templates/new_visit_registered.html
@@ -9,7 +9,7 @@ Wizyta dodana pomyślnie!
 <div class="row">
 
 <div class="col-8 offset-2">
-  <a href="/" class="btn btn-block btn-outline-primary">Powrót do panelu użytkownika</a>
+  <a href="/{{ user.id }}" class="btn btn-block btn-outline-primary">Powrót do panelu użytkownika</a>
 </div>
   
 </div>
