--- a/src/templates/new_visit.html
+++ b/src/templates/new_visit.html
@@ -31,7 +31,7 @@ Nowa wizyta
 
 <p>
   <div class="col-6 offset-3">
-    <a href="/" class="btn btn-block btn-outline-secondary">Anuluj</a>
+    <a href="/{{ user.id }}" class="btn btn-block btn-outline-secondary">Anuluj</a>
   </div>
 
 {% endblock %}
