change fonts & other minor changes

--- a/src/templates/homepage.html
+++ b/src/templates/homepage.html
@@ -21,7 +21,7 @@ Panel użytkownika
   <div class="col mb-4">
     <div class="card text-center menuTile justify-content-center">
       <a href="/{{ user.id }}/visits  " class="clickableCard"></a>
-      <p class="card-text menuTileText">Wyświetl swoje wizyty</p>
+      <p class="card-text menuTileText">Wyświetl zapisane wizyty</p>
     </div>
   </div>        
   <div class="col mb-4">
