--- a/src/templates/new_visit_other_info.html
+++ b/src/templates/new_visit_other_info.html
@@ -35,7 +35,7 @@
         <button type="submit" class="btn btn-block btn-outline-primary">Zatwierdź</button>
       </div>
       <div class="col-sm-6">
-        <a href="/" class="btn btn-block btn-outline-secondary">Anuluj</a>
+        <a href="/{{ user.id }}" class="btn btn-block btn-outline-secondary">Anuluj</a>
       </div>
     </div>
   </form>
