--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -10,6 +10,9 @@
     
     <link rel="stylesheet" href="/static/style.css" />
 
+      <link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
+      <link href='https://fonts.googleapis.com/css?family=Fredericka the Great' rel='stylesheet'>
+
     <title>S-CAPE - {% block title %}{% endblock %}</title>
   </head>
   <body
@@ -29,6 +32,4 @@
       <div class="pageContent">
         {% block body %}{% endblock %}
       </div>
-    </div>
-  </body>
 </html>
