--- a/src/static/style.css
+++ b/src/static/style.css
@@ -1,5 +1,6 @@
 body, html {
- background-image: url("https://unblast.com/wp-content/uploads/2018/12/Subtle-Patterns-8.jpg") !important;
+ background-image: url("/static/brick3.jpg") !important;
+ font-size: 1.12 rem;
  font-family: 'Oswald', sans-serif;
 }
 
@@ -7,8 +8,8 @@ body, html {
 	font-size: 12vh;
 	font-family:"Fredericka the Great";
 	font-weight: bold;
-	margin-top: 5vh;
-	margin-bottom: 5vh;
+	margin-top: 2.8vh;
+	margin-bottom: 2.8vh;
 	text-align: center;
 	text-decoration: none !important;
 	color: black !important;
@@ -49,6 +50,7 @@ body, html {
 
 .btn {
     background: white;
+    opacity: 0.75;
 }
 
 .clickableCard {
@@ -60,6 +62,22 @@ body, html {
 	opacity: 0.1;
 }
 
-.list-group-item-action {
-    opacity:0.85;
+.list-group-item {
+    opacity:0.75;
+}
+
+.col-tit {
+    margin-bottom: 3vh;
+    background-color: white;
+    opacity: 0.8;
+}
+
+
+.container-fluid {
+    background: rgba(255, 255, 255, 0.3);
+    border-radius: 25px;
+}
+
+.container-inner {
+    padding: 2.9vh;
 }
