--- a/src/templates/new_visit_group_selection.html
+++ b/src/templates/new_visit_group_selection.html
@@ -6,7 +6,7 @@
 
 {% block body %}
 <div class="row">
-  <div class="col" style="margin-bottom: 30px;">
+  <div class="col" style="margin-bottom: 3vh;">
     Wybierz grupę, z którą odbyłeś wizytę:
   </div>
 </div>
