add escape room owner company

--- a/src/templates/homepage.html
+++ b/src/templates/homepage.html
@@ -2,6 +2,8 @@
 
 {% block title %}
 Panel użytkownika
+<!--<small class="text-muted"> {{ user.username }}</small>
+-->
 {% endblock %}
 
 {% block body %}
@@ -40,6 +42,7 @@ Panel użytkownika
     <div class="card text-center menuTile justify-content-center">
       <a href="/{{ user.id }}" class="clickableCard"></a>
       <p class="card-text menuTileText">Wyloguj</p>
+
     </div>
   </div>
 </div>
