--- a/src/static/style.css
+++ b/src/static/style.css
@@ -29,7 +29,7 @@ body, html {
 }
 
 .menuTile {
-	height: 25vh;
+	height: 23vh;
 	opacity: 0.75;
 }
 
@@ -61,6 +61,12 @@ body, html {
 	width: 100%;
 	opacity: 0.1;
 }
+
+.list-group{
+    max-height: 42vh;
+    overflow-y:auto;
+}
+
 
 .list-group-item {
     opacity:0.75;
