--- a/src/templates/new_visit.html
+++ b/src/templates/new_visit.html
@@ -13,17 +13,20 @@ Nowa wizyta
 
 <div class="row">
 <div class="col">
-  
+
 <div class="list-group">
-  {% for room in rooms %}
-  <a href="/{{user.id}}/register_visit/{{ room.id }}" class="list-group-item list-group-item-action">
-    <div class="d-flex w-100 justify-content-between">
-      <h5 class="mb-1">{{ room.name }}</h5>
-      <small class="text-muted">{{ room.category }}</small>
-    </div>
-    <p class="mb-1">{{ room.company }}</p>
-  </a>
-  {% endfor %}
+  <div class="my-custom-scrollbar my-custom-scrollbar-primary">
+    {% for room in rooms %}
+
+    <a href="/{{user.id}}/register_visit/{{ room.id }}" class="list-group-item list-group-item-action">
+      <div class="d-flex w-100 justify-content-between">
+        <h4 class="mb-1"><b>{{ room.name }}</b>: {{ room.owner }} </h4>
+        <small class="text-muted">{{ room.category }}</small>
+      </div>
+      <p class="mb-1">{{ room.company }}</p>
+    </a>
+    {% endfor %}
+  </div>
 </div>
 
 </div>
