add calendar constraints

--- a/src/templates/new_visit_other_info.html
+++ b/src/templates/new_visit_other_info.html
@@ -15,7 +15,7 @@
     <div class="form-group row">
       <label for="visitDate" class="col-sm-6 col-form-label">Data wizyty:</label>
       <div class="col-sm-6">
-        <input type="date" class="form-control" id="visitDate" name="visitDate" required="true">
+        <input type="date" min='2000-01-01' max= {{ today }} class="form-control" id="visitDate" name="visitDate" required="true">
       </div>
     </div>
     <div class="form-group row">
