--- a/src/templates/btn_return.html
+++ b/src/templates/btn_return.html
@@ -3,7 +3,7 @@
   <div class="col-6 offset-3">
     <div class="form-group row" style="margin-top: 50px;">
         <div class="col-sm-6">
-          <a href="javascript:history.back()" class="btn btn-block btn-outline-secondary">Powrót</a>
+          <a href="javascript:history.back()" class="btn btn-block btn-outline-secondary">Cofnij</a>
         </div>
         <div class="col-sm-6">
           <a href="/{{ user.id }}" class="btn btn-block btn-outline-secondary">Anuluj</a>
