--- a/src/templates/new_visit_other_info.html
+++ b/src/templates/new_visit_other_info.html
@@ -31,10 +31,13 @@
       </div>
     </div>
     <div class="form-group row" style="margin-top: 50px;">
+      <div class="col-sm-3">
+        <a href=javascript:history.back() class="btn btn-block btn-outline-secondary">Cofnij</a>
+      </div>
       <div class="col-sm-6">
         <button type="submit" class="btn btn-block btn-outline-primary">Zatwierdź</button>
       </div>
-      <div class="col-sm-6">
+      <div class="col-sm-3">
         <a href="/{{ user.id }}" class="btn btn-block btn-outline-secondary">Anuluj</a>
       </div>
     </div>
