--- a/src/static/style.css
+++ b/src/static/style.css
@@ -1,6 +1,6 @@
 body, html {
  background-image: url("/static/brick3.jpg") !important;
- font-size: 1.12 rem;
+ font-size: 2.5vh;
  font-family: 'Oswald', sans-serif;
 }
 
@@ -87,4 +87,8 @@ body, html {
 
 .container-inner {
     padding: 2.9vh;
+}
+
+.mb-1 {
+    font-size: 2.9vh;
 }
