--- a/src/templates/new_visit_error.html
+++ b/src/templates/new_visit_error.html
@@ -1,6 +1,9 @@
 {% extends "index.html" %}
 
 {% block title %}
+  {% for error in errors %}
+    <p>{{ error }}</p>
+  {% endfor %}
 {{ error }}
 {% endblock %}
 
