--- a/src/templates/new_visit_groups_error.html
+++ b/src/templates/new_visit_groups_error.html
@@ -1,10 +1,20 @@
 {% extends "index.html" %}
 
 {% block title %}
-Aby zarestrować wizytę musisz być członkiem co najmniej jednej grupy.
+Nie można zarejestrować wizyty
 {% endblock %}
 
 {% block body %}
+
+<div class="row">
+    <div class="col pageTitle" style="margin-bottom:3vh;">
+        <div class="card text-center">
+            <div class="card-body">
+                <h5 class="card-text-c1">Aby zarestrować wizytę musisz być członkiem co najmniej jednej grupy.</h5>
+            </div>
+        </div>
+    </div>
+</div>
 
 <div class="col-6 offset-3">
     <a href="/{{ user.id}} " class="btn btn-block btn-outline-secondary">Powrót</a>
